src/objects/BC_Staging_Order__c.object
<CustomObject>
    <description>BigCommerce Staging record in order to pull order data into Salesforce</description>
    <fields>
        <fullName>Address1__c</fullName>
        <description>Mailing Address Line 1 of the customer</description>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>Mailing Address Line 2 of BC Order</description>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCUnique_ID__c</fullName>
        <label>BC Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <description>billing country from bc order</description>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignMemberCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CampaignMemberCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignMemberId__c</fullName>
        <description>Campaign Member Id in text form</description>
        <label>CampaignMemberId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Mailing City of the User</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>Country Code of Address</description>
        <label>CountryCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Mailing Country of Purchase</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CouponCode__c</fullName>
        <description>coupon code utilized in the purchase if 100% off due to existing quote</description>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyExchangeRate__c</fullName>
        <description>to do any math with regards to displaying proper currency</description>
        <label>Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>Discount Amount to reduce transaction on QuoteLine</description>
        <label>Discount Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>error message for debugging</description>
        <label>Error Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <description>If order has been picked up by the integration</description>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceMeOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED as Invoice me should automatically create Opp</description>
        <label>InvoiceMe Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNewMiniBCOpp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean to determine if the payment count is the 1st month of a new year</description>
        <label>Is New MiniBC Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsZeroDollarDeal__c</fullName>
        <formula>VALUE(OrderTotal__c) = 0</formula>
        <label>IsZeroDollarDeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OpportunityCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <description>Id of Opportunity created or is related to this staging record.</description>
        <label>OpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>BigCommerce Order Number</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <description>BigCommerce Order Status Number</description>
        <label>Order Status</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderTotal__c</fullName>
        <description>total_inc_tax</description>
        <label>Order Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCount__c</fullName>
        <description>number of months on the subscription.</description>
        <label>PaymentCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>Postal Code of customer address</description>
        <label>PostalCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Jsonified object grouping of order products</description>
        <label>Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuoteCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuoteCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteLinesCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuoteLinesCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StaffNotes__c</fullName>
        <description>Staff Notes in order to store MiniBC Details if necessary</description>
        <label>Staff Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State/Province of Mailing Address</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreEndpoint__c</fullName>
        <description>Format to query Store data for following calls. Format: stores/51cr4954or</description>
        <label>Store Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreId__c</fullName>
        <description>Integer Id of BigCommerce (USD or EUR store)</description>
        <label>Store Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionId__c</fullName>
        <description>MiniBC Subscription Id</description>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Purchase (v1 until mixed purchases are introduced)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect Pass</fullName>
                </value>
                <value>
                    <fullName>Hyper.Now</fullName>
                </value>
                <value>
                    <fullName>World Premium Pass</fullName>
                </value>
                <value>
                    <fullName>Analyst Pass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <description>User Email purchasing the Order</description>
        <label>UserEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if batch job fails</description>
        <label>hasError</label>
        <type>Checkbox</type>
    </fields>
    <label>BC Staging Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>OrderStatus__c</columns>
        <columns>QuoteCreated__c</columns>
        <columns>QuoteLinesCreated__c</columns>
        <columns>OpportunityCreated__c</columns>
        <columns>ContactUpdated__c</columns>
        <columns>CampaignMemberCreated__c</columns>
        <columns>UserEmail__c</columns>
        <columns>IsZeroDollarDeal__c</columns>
        <columns>OpportunityId__c</columns>
        <columns>hasError__c</columns>
        <columns>ErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Non_Zero_Deals</fullName>
        <columns>NAME</columns>
        <columns>OrderNumber__c</columns>
        <columns>OrderStatus__c</columns>
        <columns>QuoteCreated__c</columns>
        <columns>QuoteLinesCreated__c</columns>
        <columns>OpportunityCreated__c</columns>
        <columns>ContactUpdated__c</columns>
        <columns>CampaignMemberCreated__c</columns>
        <columns>UserEmail__c</columns>
        <columns>IsZeroDollarDeal__c</columns>
        <columns>OpportunityId__c</columns>
        <columns>hasError__c</columns>
        <columns>ErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsZeroDollarDeal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Non-Zero Deals</label>
    </listViews>
    <listViews>
        <fullName>Error_List_View</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>hasError__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>OpportunityId__c</columns>
        <columns>OpportunityCreated__c</columns>
        <columns>QuoteCreated__c</columns>
        <columns>QuoteLinesCreated__c</columns>
        <columns>ContactUpdated__c</columns>
        <columns>CampaignMemberCreated__c</columns>
        <columns>BCUnique_ID__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>hasError__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsZeroDollarDeal__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Error List View</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>BC Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BC Staging Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>